@@ -9,6 +9,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - [FRONTEND] Redis stream support for input log
 - [REDIS] Password support for local redis
+- [REDIS] New api function set_password and set_replica_of
 ### Changed
 - [CLUSTER] Evolve daemon's code to allow correctly handling tasks during service shutdowns
 - [API] Increase API key length for new clusters from 16 to 32 characters
